# graphic-lab

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: stb_image_write.h  tiny_obj_loader.h
output/: render.ppm
src/: main.cpp
